--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,19 +1,24 @@
 .title {
     color: #02ccba;
   }
- header{
+  .all{
+    max-width: 2000px;
+    width : 100%;
+    font-size: 20px;
+  }
+/*-------------Bagian Header-------------*/
+  header{
   background-color: white;
   border : 5px solid black;
   padding : 2px;
   padding-bottom :5px;
-  margin-top:19px;
+  margin-top:0px;
   height: 50px;
  }
-.Logo-Header{
-  font-family : "calibri";
-  font-size : 20px;
+
   
-}
+  
+
 .btn{ 
   display: inline-block;
   text-decoration: none; 
@@ -26,6 +31,7 @@
   padding-right: 12px;
   font-size: 30px;
   background-color: white;
+  float: right;
  }
 .Account{
   float : right;
@@ -36,8 +42,14 @@
   font-size: 30px;
   background-color: white;
   border-left : 5px solid black;
-
+  float :right;
 }
+.Logo-Header{
+  font-family : "calibri";
+  font-size : 40px;
+  margin : 10px;
+  }
+
 .Home {
   padding-top:10px;
   padding-bottom: 9px;
@@ -46,6 +58,7 @@
   font-size: 30px;
   background-color: white;
   border-right : 5px solid black;
+  float : left;
   }
   .btn:hover{
     background-color: #aaff9c;
@@ -53,3 +66,133 @@
  .fa{
    color : black;
  }
+  /*----Bagian Main-----*/
+  main {
+    
+    height: 600px;
+    
+    width: 100%;
+    
+  }
+  .container {
+    width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  .main1 {
+    background-image: url(https://img.freepik.com/free-vector/flat-arabic-pattern-background_79603-1826.jpg?t=st=1649946054~exp=1649946654~hmac=1177eaa1e2a1c80ac108cb1d728e99aa2d5148d5938e21c99ff2dfe3cdc67250&w=826);
+    background-size: cover;
+    color: #1e272e;
+    text-align: center;
+    padding: 25px 0;
+    margin-bottom :0px;
+    padding-bottom : 30px;
+  }
+  .container h1 {
+    opacity: 0.8;
+    font-size: 45px;
+    letter-spacing: 5px;
+    margin-bottom: 0px;
+  }
+  .container p {
+    opacity: 0.7;
+    font-size: 30px;
+    margin-bottom: 0px;
+  }
+
+
+  /*----Bagian Body-----*/
+  .tombol {
+    padding-top :0px;
+
+  padding-bottom :5px;
+  margin-top:19px;
+  height: 50px;
+  }
+  .pencarian {
+    text-align: center;
+    width: 200px;
+    font-size : 25px;
+    padding : 10px;
+    float : left;
+    background-color: white;
+    border : 2px solid black;
+    margin : 20px;
+    margin-top : 0px;
+    border-radius: 30px;
+  }
+  .pencarian1 {
+    text-align: center;
+    width: 100px;
+    font-size : 25px;
+    padding : 10px;
+    float : left;
+    background-color: white;
+    border : 2px solid black;
+    margin : 20px;
+    margin-top : 0px;
+    border-radius: 30px;
+  }
+ 
+ /*--- Foto Produknya---*/
+ .Foto{
+ 
+   width: 0 auto;
+   height: 500px;
+ }
+ .produk {
+  float : left;
+  margin : 20px;
+  
+}
+img {
+  height: 400px;
+  width: 0 auto;
+  border : 2px solid black;
+  border-radius: 20px;
+}
+img:hover{
+  opacity: 0.7;
+}
+
+.harga {
+float :left;
+}
+ /*----Bagian Footer-----*/
+ li{
+   list-style: none;
+ }
+
+footer {
+  background-color: hsl(110, 13%, 19%);
+  color: rgba(252, 249, 249, 0.973);
+  height: 80px;
+  padding: 20px;
+  font-size: 20px;
+}
+.footer-left {
+  float :left;
+}
+.footer-right  {
+  float: right;
+  text-align: right;
+}
+
+.buttonIG{
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+ 
+  width: 110px;
+  height: 15px;
+  background-color: white;
+  border-radius: 10px;
+  color : black;
+}
+.buttonIG:hover{
+    background-color: #aaff9c;
+   
+  color : black;
+}
+ 
